@@ -11,16 +11,16 @@
 
 (defvar *clisp-home* (namestring (default-directory)))
 (defvar *clisp-runtime*
-  (concatenate 'string "\"" *clisp-home* "base\\lisp.exe\""))
+  (ext:string-concat "\"" *clisp-home* "base\\lisp.exe\""))
 (defvar *clisp-some-args*
-  (concatenate 'string " -B \"" (substitute #\/ #\\ *clisp-home*) "\" -M "))
+  (ext:string-concat " -B \"" (substitute #\/ #\\ *clisp-home*) "\" -M "))
 (defvar *clisp-some-cmd*
-  (concatenate 'string *clisp-runtime* *clisp-some-args*))
+  (ext:string-concat *clisp-runtime* *clisp-some-args*))
 (defvar *clisp-args*
-  (concatenate 'string *clisp-some-args* "\""
+  (ext:string-concat *clisp-some-args* "\""
                *clisp-home* "base\\lispinit.mem\""))
 (defvar *clisp-cmd*
-  (concatenate 'string *clisp-runtime* *clisp-args*))
+  (ext:string-concat *clisp-runtime* *clisp-args*))
 
 (defvar *eflags*
   (make-array 4 :element-type '(unsigned-byte 8) :initial-contents '(0 0 0 0)))
@@ -44,7 +44,7 @@
       (setf (dir-key-value cc "") "Compile with CLISP")
       (with-dir-key-open (cmd cc "command" :direction :output)
         (setf (dir-key-value cmd "")
-              (concatenate 'string *clisp-cmd* " -c \"%1\""))))))
+              (ext:string-concat *clisp-cmd* " -c \"%1\""))))))
 
 (defun add-fas-file (dkey)
   (format t "associating CLISP with FAS files under ~s~%" (dir-key-path dkey))
@@ -59,12 +59,12 @@
         (setf (dir-key-value ex "") "Execute with CLISP")
         (with-dir-key-open (cmd ex "command" :direction :output)
           (setf (dir-key-value cmd "")
-                (concatenate 'string *clisp-cmd* " \"%1\""))))
+                (ext:string-concat *clisp-cmd* " \"%1\""))))
       (with-dir-key-open (lo sh "Load_into_CLISP" :direction :output)
         (setf (dir-key-value lo "") "Load into CLISP")
         (with-dir-key-open (cmd lo "command" :direction :output)
           (setf (dir-key-value cmd "")
-                (concatenate 'string *clisp-cmd* " -i \"%1\"")))))))
+                (ext:string-concat *clisp-cmd* " -i \"%1\"")))))))
 
 (defun add-mem-file (dkey)
   (format t "associating CLISP with MEM files under ~s~%" (dir-key-path dkey))
@@ -79,7 +79,7 @@
         (setf (dir-key-value ex "") "Run with CLISP")
         (with-dir-key-open (cmd ex "command" :direction :output)
           (setf (dir-key-value cmd "")
-                (concatenate 'string *clisp-some-cmd* " \"%1\"")))))))
+                (ext:string-concat *clisp-some-cmd* " \"%1\"")))))))
 
 (when (y-or-n-p "Associate types~:{ <~a>,~} with CLISP?" *lisp-type-map*)
   (with-dir-key-open (c1 :win32 "HKEY_CLASSES_ROOT")
@@ -91,16 +91,16 @@
     (add-mem-file c1)))
 
 (let* ((desktop (dir-key-single-value :win32 "HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Shell Folders" "Common Desktop"))
-       (bat-file (concatenate 'string *clisp-home* "clisp.bat"))
-       (lnk-file (concatenate 'string desktop "\\CLISP.lnk"))
-       (url-file (concatenate 'string desktop "\\CLISP home.url")))
+       (bat-file (ext:string-concat *clisp-home* "clisp.bat"))
+       (lnk-file (ext:string-concat desktop "\\CLISP.lnk"))
+       (url-file (ext:string-concat desktop "\\CLISP home.url")))
   (when (y-or-n-p "Create a shorcut to CLISP on your desktop <~a>?" lnk-file)
     (format t "~&writing <~a>..." lnk-file) (force-output)
     (posix:make-shortcut
      lnk-file :path *clisp-runtime* :arguments *clisp-args*
      :working-directory (namestring (user-homedir-pathname))
      :description "CLISP - ANSI Common Lisp implementation"
-     :icon (concatenate 'string *clisp-home* "doc\\clisp.ico"))
+     :icon (ext:string-concat *clisp-home* "doc\\clisp.ico"))
     (format t "done~%"))
   (when (y-or-n-p "Create CLISP URL file on your desktop <~a>?" url-file)
     (with-open-file (url (substitute #\/ #\\ url-file) :direction :output)
